k8s/networking/web-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: myapp.info
      http:
        paths:
          - path: /
            backend:
              serviceName: web-app
              servicePort: 80
          - path: /hello
            backend:
              serviceName: web-app
              servicePort: 80
